added links to other pages on navbar

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <div class="collapse navbar-collapse" id="mynavbar">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link" href="javascript:void(0)">Chicken Recipes</a>
+          <a class="nav-link" href="Chicken.html">Chicken Recipes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="javascript:void(0)">Beef Recipes</a>
+          <a class="nav-link" href="Beef.html">Beef Recipes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="javascript:void(0)">Pork Recipes</a>
+          <a class="nav-link" href="Pork.html">Pork Recipes</a>
         </li>
       </ul>
       <form class="d-flex">
